--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
     "redux": "^3.5.2"
   },
   "devDependencies": {
