--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "type": "git",
     "url": "git+https://github.com/CitronTech/metaspot.git"
   },
-  "author": "Gerald Truong aka TheBentArrow",
+  "author": "Gerald Truong aka TheBentArrow aka ForwardMotion",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/CitronTech/metaspot/issues"
