--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "webpack": "^1.13.0"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "NODE_ENV=development webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
